# ws_ai_tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  infer_image.py  main.mm  output.md
scripts/: infer_image.py  run.py  screen_cap.py
src/: CMakeLists.txt
src/include/ws_ai/: config.h  http_server.h  job_manager.h  llm_runner.h  ocr_vision.h  pipeline.h  prompt.h  util.h
src/src/: http_server.cpp  job_manager.cpp  llm_runner.cpp  main.cpp  ocr_vision.mm  pipeline.mm  prompt.cpp  util.cpp
src/web/: app.js  index.html  style.css
test/: CMakeLists.txt
